tests/ui/rename/rename_pair_unexpected_lit.stderr
error: unexpected literal type `byte string`
 --> $DIR/rename_pair_unexpected_lit.rs:5:33
  |
5 |     #[shorthand(rename(format = b"binary"))]
  |                                 ^^^^^^^^^
